[package]
name = "memtable"
version = "0.1.0"
edition = "2018"

[features]
cell = ["memtable-core/cell"]
csv = ["memtable-core/csv"]
macros = ["memtable-macros"]
serde = ["memtable-core/serde-1"]

[dependencies]
memtable-core = { version = "=0.1.0", path = "memtable-core" }
memtable-macros = { version = "=0.1.0", path = "memtable-macros", optional = true }

[workspace]
members = [
    "memtable-core",
    "memtable-macros",
]

[package.metadata.docs.rs]
all-features = true
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]
