[package]
name = "memtable"
description = "Inmemory tables for use in Rust"
version = "0.1.0"
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
edition = "2018"
homepage = "https://github.com/chipsenkbeil/memtable-rs"
repository = "https://github.com/chipsenkbeil/memtable-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"

[features]
cell = ["memtable-core/cell"]
csv = ["memtable-core/csv"]
macros = ["memtable-macros"]
serde = ["memtable-core/serde-1"]
sled = ["memtable-core/sled-1"]

[dependencies]
memtable-core = { version = "=0.1.0", path = "memtable-core" }
memtable-macros = { version = "=0.1.0", path = "memtable-macros", optional = true }

[workspace]
members = [
    "memtable-core",
    "memtable-macros",
]

[package.metadata.docs.rs]
all-features = true
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]
