[package]
name = "memtable"
description = "Inmemory tables for use in Rust"
version = "0.2.0"
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
edition = "2018"
homepage = "https://github.com/chipsenkbeil/memtable-rs"
repository = "https://github.com/chipsenkbeil/memtable-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"

[features]
default = ["std"]

alloc = ["memtable-core/alloc"]
cell = ["memtable-core/cell"]
csv = ["memtable-core/csv"]
macros = ["memtable-macros"]
predicates = ["memtable-core/predicates"]
serde = ["memtable-core/serde-1"]
sled = ["memtable-core/sled-1"]
std = ["memtable-core/std"]

[dependencies]
memtable-core = { version = "=0.2.0", path = "memtable-core", default-features = false }
memtable-macros = { version = "=0.2.0", path = "memtable-macros", optional = true }

[dev-dependencies]
doc-comment = "0.3.3"

[workspace]
members = [
    "memtable-core",
    "memtable-macros",
]

[package.metadata.docs.rs]
all-features = true
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]
