[package]
name = "memtable-core"
description = "Core library that provides table data structures"
version = "0.1.0"
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
edition = "2018"
homepage = "https://github.com/chipsenkbeil/memtable-rs"
repository = "https://github.com/chipsenkbeil/memtable-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"

[features]
serde-1 = ["serde", "serde_with"]

[dependencies]
paste = "1.0.5"

csv = { version = "1.1", optional = true }
serde = { version = "1.0.115", features = ["derive"], optional = true }
serde_with = { version = "1.9.1", optional = true }

[dev-dependencies]
tempfile = "3.2"
