[package]
name = "memtable-core"
description = "Core library that provides table data structures"
version = "0.2.0"
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
edition = "2018"
homepage = "https://github.com/chipsenkbeil/memtable-rs"
repository = "https://github.com/chipsenkbeil/memtable-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"

[features]
default = ["std"]

alloc = []
cell = []
serde-1 = ["serde", "serde_with"]
sled-1 = ["bincode", "serde-1", "sled"]
std = []

[dependencies]
paste = "1.0.5"

bincode = { version = "1.3.3", optional = true }
csv = { version = "1.1.6", optional = true }
serde = { version = "1.0.117", features = ["derive"], optional = true }
serde_with = { version = "1.9.4", optional = true }
sled = { version = "0.34.6", optional = true }

[dev-dependencies]
tempfile = "3.2"
serde_json = "1.0.64"

[package.metadata.docs.rs]
all-features = true
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]
