[package]
name = "memtable-macros"
description = "Macro library that provides ability to derive typed tables and generate tables compile-time."
categories = ["data-structures"]
version = "0.2.0"
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
edition = "2018"
homepage = "https://github.com/chipsenkbeil/memtable-rs"
repository = "https://github.com/chipsenkbeil/memtable-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
darling = "0.12.0"
heck = "0.3.1"
proc-macro2 = "1.0.24"
proc-macro-crate = "1.0.0"
quote = "1.0.7"
syn = { version = "1.0.53", features = ["full"] }
voca_rs = "1.13.0"

[dev-dependencies]
memtable-core = { version = "=0.2.0", path = "../memtable-core" }
rustversion = "1.0.4"
trybuild = "1.0.35"

[package.metadata.docs.rs]
all-features = true
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]
